# python_vercel

./: .gitignore  Dockerfile  README.md  __requirements.txt  docker-compose.yml  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py  typeDefs.py
api/_utils/: member.py  typeDefs.graphql
