[tool.poetry]
name = "ariadne_starter"
version = "0.1.0"
description = ""
authors = ["shimahi"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
ariadne = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
